Changelog for z3c.testsetup
***************************

0.6 (unreleased)
================

- Nothing changed yet.


0.5.1 (2009-10-22)
==================

* Reverted allow_teardown default back to False to prevent confusion.

0.5 (2009-09-23)
================

Bug fixes
---------

* Checkers are now applied to non-functional doctests too. Thanks to
  Jonathan Ballet for patches.

* Normal UnitTest layers are now registered correctly.

* ``:layer:`` now detects functional ZCML layers. If the defined layer is
  derived from `zope.testing.functional.ZCMLLayer`, then the test is
  set up with the same kind of testcase as ``:functional-zcml-layer:``.

* Reordered and cleaned up the documentation.

Feature changes
---------------

* By default, functional layer tests now use the allow_teardown=True option of
  the ZCMLLayer.  This prevents the zcml layer from running in a subprocess
  which throws off profiling and thus code coverage tools.  Running it in a
  subprocess is only normally needed when you do things like adding an
  interface to a class after the fact in your code.  You can overrid it in the
  register_all_tests() call by setting allow_teardown=False.


0.4 (2009-06-11)
================

Bug fixes
---------

* Made ``z3c.testsetup`` selftests work with ``zope.testing`` >=
  3.7.3. Thanks to Jonathan Ballet for pointing to that problem.

* Ignore \*nix hidden test files (i.e. such starting with a dot in
  filename) by default. Thanks to Jonathan Ballet for patch.

* ZCML files registered via the default layer are now separated from
  each other, even if they own the same filename. Therefore you can now
  register a default layer with an ``ftesting.zcml`` in one subpackage
  while having another ``ftesting.zcml`` in another package. This was
  not handled correctly before. Many thanks go to Jonathan Ballet who
  contributed a patch.

Feature Changes
---------------

* Added ``z3c.testsetup.testrunner`` that provides wrappers for