@@ -1,0 +1,11 @@
+"""
+
+.. :unittest:
+
+This module is broken *and* it is marked as a test module
+
+A warning should be printed
+
+"""
+
+import non_existing_package
