@@ -1,0 +1,11 @@
+"""
+
+.. :Test-Layer: python
+
+This module is broken *and* it is marked as a test module (though in the old way).
+
+A warning should be printed
+
+"""
+
+import non_existing_package
